src/LibNotcurses.jl


function notcurses_init(opts, fp)
    ccall((:notcurses_init, notcurses), Ptr{notcurses}, (Ptr{notcurses_options}, Ptr{Libc.FILE}), opts, fp)
end

function notcurses_core_init(opts, fp)
    ccall((:notcurses_core_init, notcurses), Ptr{notcurses}, (Ptr{notcurses_options}, Ptr{Libc.FILE}), opts, fp)
end

function notcurses_stop(nc)
    ccall((:notcurses_stop, notcurses), Cint, (Ptr{notcurses},), nc)
end

function notcurses_enter_alternate_screen(nc)
    ccall((:notcurses_enter_alternate_screen, notcurses), Cint, (Ptr{notcurses},), nc)
end

function notcurses_leave_alternate_screen(nc)
    ccall((:notcurses_leave_alternate_screen, notcurses), Cint, (Ptr{notcurses},), nc)
end

function notcurses_stdplane(nc)
    ccall((:notcurses_stdplane, notcurses), Ptr{ncplane}, (Ptr{notcurses},), nc)
end

function notcurses_stdplane_const(nc)
    ccall((:notcurses_stdplane_const, notcurses), Ptr{ncplane}, (Ptr{notcurses},), nc)
end

function ncpile_top(n)
    ccall((:ncpile_top, notcurses), Ptr{ncplane}, (Ptr{ncplane},), n)
end

function ncpile_bottom(n)
    ccall((:ncpile_bottom, notcurses), Ptr{ncplane}, (Ptr{ncplane},), n)
end

function notcurses_top(n)
    ccall((:notcurses_top, notcurses), Ptr{ncplane}, (Ptr{notcurses},), n)
end

function notcurses_bottom(n)
    ccall((:notcurses_bottom, notcurses), Ptr{ncplane}, (Ptr{notcurses},), n)
end

function ncpile_render(n)
    ccall((:ncpile_render, notcurses), Cint, (Ptr{ncplane},), n)
end

function ncpile_rasterize(n)
    ccall((:ncpile_rasterize, notcurses), Cint, (Ptr{ncplane},), n)
end

function notcurses_render(nc)
    ccall((:notcurses_render, notcurses), Cint, (Ptr{notcurses},), nc)
end

function ncpile_render_to_buffer(p, buf, buflen)
    ccall((:ncpile_render_to_buffer, notcurses), Cint, (Ptr{ncplane}, Ptr{Ptr{Cchar}}, Ptr{Csize_t}), p, buf, buflen)
end

function ncpile_render_to_file(p, fp)
    ccall((:ncpile_render_to_file, notcurses), Cint, (Ptr{ncplane}, Ptr{Libc.FILE}), p, fp)
end

function notcurses_drop_planes(nc)
    ccall((:notcurses_drop_planes, notcurses), Cvoid, (Ptr{notcurses},), nc)
end

function nckey_mouse_p(r)
    ccall((:nckey_mouse_p, notcurses), Bool, (UInt32,), r)
end

@cenum ncintype_e::UInt32 begin
    NCTYPE_UNKNOWN = 0
    NCTYPE_PRESS = 1
    NCTYPE_REPEAT = 2
    NCTYPE_RELEASE = 3
end

struct ncinput
    id::UInt32
    y::Cint
    x::Cint
    utf8::NTuple{5,Cchar}
    alt::Bool
    shift::Bool
    ctrl::Bool
    evtype::ncintype_e
    modifiers::Cuint
    ypx::Cint
    xpx::Cint
end

function ncinput_shift_p(n)
    ccall((:ncinput_shift_p, notcurses), Bool, (Ptr{ncinput},), n)
end

function ncinput_ctrl_p(n)
    ccall((:ncinput_ctrl_p, notcurses), Bool, (Ptr{ncinput},), n)
end

function ncinput_alt_p(n)
    ccall((:ncinput_alt_p, notcurses), Bool, (Ptr{ncinput},), n)
end

function ncinput_meta_p(n)
    ccall((:ncinput_meta_p, notcurses), Bool, (Ptr{ncinput},), n)
end

function ncinput_super_p(n)
    ccall((:ncinput_super_p, notcurses), Bool, (Ptr{ncinput},), n)
end

function ncinput_hyper_p(n)
    ccall((:ncinput_hyper_p, notcurses), Bool, (Ptr{ncinput},), n)
end

function ncinput_capslock_p(n)
    ccall((:ncinput_capslock_p, notcurses), Bool, (Ptr{ncinput},), n)
end

function ncinput_numlock_p(n)
    ccall((:ncinput_numlock_p, notcurses), Bool, (Ptr{ncinput},), n)
end

function ncinput_equal_p(n1, n2)
    ccall((:ncinput_equal_p, notcurses), Bool, (Ptr{ncinput}, Ptr{ncinput}), n1, n2)
end

function notcurses_get(n, ts, ni)
    ccall((:notcurses_get, notcurses), UInt32, (Ptr{notcurses}, Ptr{Cvoid}, Ptr{ncinput}), n, ts, ni)
end

function notcurses_getvec(n, ts, ni, vcount)
    ccall((:notcurses_getvec, notcurses), Cint, (Ptr{notcurses}, Ptr{Cvoid}, Ptr{ncinput}, Cint), n, ts, ni, vcount)
end

function notcurses_inputready_fd(n)
    ccall((:notcurses_inputready_fd, notcurses), Cint, (Ptr{notcurses},), n)
end

function notcurses_get_nblock(n, ni)
    ccall((:notcurses_get_nblock, notcurses), UInt32, (Ptr{notcurses}, Ptr{ncinput}), n, ni)
end

function notcurses_get_blocking(n, ni)
    ccall((:notcurses_get_blocking, notcurses), UInt32, (Ptr{notcurses}, Ptr{ncinput}), n, ni)
end

function ncinput_nomod_p(ni)
    ccall((:ncinput_nomod_p, notcurses), Bool, (Ptr{ncinput},), ni)
end

function notcurses_mice_enable(n, eventmask)
    ccall((:notcurses_mice_enable, notcurses), Cint, (Ptr{notcurses}, Cuint), n, eventmask)
end

function notcurses_mice_disable(n)
    ccall((:notcurses_mice_disable, notcurses), Cint, (Ptr{notcurses},), n)
end

function notcurses_linesigs_disable(n)
    ccall((:notcurses_linesigs_disable, notcurses), Cint, (Ptr{notcurses},), n)
end

function notcurses_linesigs_enable(n)
    ccall((:notcurses_linesigs_enable, notcurses), Cint, (Ptr{notcurses},), n)
end

function notcurses_refresh(n, y, x)
    ccall((:notcurses_refresh, notcurses), Cint, (Ptr{notcurses}, Ptr{Cuint}, Ptr{Cuint}), n, y, x)
end

function ncplane_notcurses(n)
    ccall((:ncplane_notcurses, notcurses), Ptr{notcurses}, (Ptr{ncplane},), n)
end

function ncplane_notcurses_const(n)
    ccall((:ncplane_notcurses_const, notcurses), Ptr{notcurses}, (Ptr{ncplane},), n)
end

function ncplane_dim_yx(n, y, x)
    ccall((:ncplane_dim_yx, notcurses), Cvoid, (Ptr{ncplane}, Ptr{Cuint}, Ptr{Cuint}), n, y, x)
end

function notcurses_stddim_yx(nc, y, x)
    ccall((:notcurses_stddim_yx, notcurses), Ptr{ncplane}, (Ptr{notcurses}, Ptr{Cuint}, Ptr{Cuint}), nc, y, x)
end

function notcurses_stddim_yx_const(nc, y, x)
    ccall((:notcurses_stddim_yx_const, notcurses), Ptr{ncplane}, (Ptr{notcurses}, Ptr{Cuint}, Ptr{Cuint}), nc, y, x)
end

function ncplane_dim_y(n)
    ccall((:ncplane_dim_y, notcurses), Cuint, (Ptr{ncplane},), n)
end

function ncplane_dim_x(n)
    ccall((:ncplane_dim_x, notcurses), Cuint, (Ptr{ncplane},), n)
end

function ncplane_pixel_geom(n, pxy, pxx, celldimy, celldimx, maxbmapy, maxbmapx)
    ccall((:ncplane_pixel_geom, notcurses), Cvoid, (Ptr{ncplane}, Ptr{Cuint}, Ptr{Cuint}, Ptr{Cuint}, Ptr{Cuint}, Ptr{Cuint}, Ptr{Cuint}), n, pxy, pxx, celldimy, celldimx, maxbmapy, maxbmapx)
end

function notcurses_term_dim_yx(n, rows, cols)
    ccall((:notcurses_term_dim_yx, notcurses), Cvoid, (Ptr{notcurses}, Ptr{Cuint}, Ptr{Cuint}), n, rows, cols)
end

function notcurses_at_yx(nc, yoff, xoff, stylemask, channels)
    ccall((:notcurses_at_yx, notcurses), Ptr{Cchar}, (Ptr{notcurses}, Cuint, Cuint, Ptr{UInt16}, Ptr{UInt64}), nc, yoff, xoff, stylemask, channels)
end

struct ncplane_options
    y::Cint
    x::Cint
    rows::Cuint
    cols::Cuint
    userptr::Ptr{Cvoid}
    name::Ptr{Cchar}
    resizecb::Ptr{Cvoid}
    flags::UInt64
    margin_b::Cuint
    margin_r::Cuint
end

function ncplane_create(n, nopts)
    ccall((:ncplane_create, notcurses), Ptr{ncplane}, (Ptr{ncplane}, Ptr{ncplane_options}), n, nopts)
end

function ncpile_create(nc, nopts)
    ccall((:ncpile_create, notcurses), Ptr{ncplane}, (Ptr{notcurses}, Ptr{ncplane_options}), nc, nopts)
end

function ncplane_resize_maximize(n)
    ccall((:ncplane_resize_maximize, notcurses), Cint, (Ptr{ncplane},), n)
end

function ncplane_resize_marginalized(n)
    ccall((:ncplane_resize_marginalized, notcurses), Cint, (Ptr{ncplane},), n)
end

function ncplane_resize_realign(n)
    ccall((:ncplane_resize_realign, notcurses), Cint, (Ptr{ncplane},), n)
end

function ncplane_resize_placewithin(n)
    ccall((:ncplane_resize_placewithin, notcurses), Cint, (Ptr{ncplane},), n)
end

function ncplane_set_resizecb(n, resizecb)
    ccall((:ncplane_set_resizecb, notcurses), Cvoid, (Ptr{ncplane}, Ptr{Cvoid}), n, resizecb)
end

function ncplane_resizecb(n)
    ccall((:ncplane_resizecb, notcurses), Ptr{Cvoid}, (Ptr{ncplane},), n)
end

function ncplane_set_name(n, name)
    ccall((:ncplane_set_name, notcurses), Cint, (Ptr{ncplane}, Ptr{Cchar}), n, name)
end

function ncplane_name(n)
    ccall((:ncplane_name, notcurses), Ptr{Cchar}, (Ptr{ncplane},), n)
end

function ncplane_reparent(n, newparent)
    ccall((:ncplane_reparent, notcurses), Ptr{ncplane}, (Ptr{ncplane}, Ptr{ncplane}), n, newparent)
end

function ncplane_reparent_family(n, newparent)
    ccall((:ncplane_reparent_family, notcurses), Ptr{ncplane}, (Ptr{ncplane}, Ptr{ncplane}), n, newparent)
end

function ncplane_dup(n, opaque)
    ccall((:ncplane_dup, notcurses), Ptr{ncplane}, (Ptr{ncplane}, Ptr{Cvoid}), n, opaque)
end

function ncplane_translate(src, dst, y, x)
    ccall((:ncplane_translate, notcurses), Cvoid, (Ptr{ncplane}, Ptr{ncplane}, Ptr{Cint}, Ptr{Cint}), src, dst, y, x)
end

function ncplane_translate_abs(n, y, x)
    ccall((:ncplane_translate_abs, notcurses), Bool, (Ptr{ncplane}, Ptr{Cint}, Ptr{Cint}), n, y, x)
end

function ncplane_set_scrolling(n, scrollp)
    ccall((:ncplane_set_scrolling, notcurses), Bool, (Ptr{ncplane}, Cuint), n, scrollp)
end

function ncplane_scrolling_p(n)
    ccall((:ncplane_scrolling_p, notcurses), Bool, (Ptr{ncplane},), n)
end

function ncplane_set_autogrow(n, growp)
    ccall((:ncplane_set_autogrow, notcurses), Bool, (Ptr{ncplane}, Cuint), n, growp)
end

function ncplane_autogrow_p(n)
    ccall((:ncplane_autogrow_p, notcurses), Bool, (Ptr{ncplane},), n)
end

struct ncpalette
    chans::NTuple{256,UInt32}
end

function ncpalette_new(nc)
    ccall((:ncpalette_new, notcurses), Ptr{ncpalette}, (Ptr{notcurses},), nc)
end

function ncpalette_use(nc, p)
    ccall((:ncpalette_use, notcurses), Cint, (Ptr{notcurses}, Ptr{ncpalette}), nc, p)
end

function ncpalette_set_rgb8(p, idx, r, g, b)
    ccall((:ncpalette_set_rgb8, notcurses), Cint, (Ptr{ncpalette}, Cint, Cuint, Cuint, Cuint), p, idx, r, g, b)
end

function ncpalette_set(p, idx, rgb)
    ccall((:ncpalette_set, notcurses), Cint, (Ptr{ncpalette}, Cint, Cuint), p, idx, rgb)
end

function ncpalette_get(p, idx, palent)
    ccall((:ncpalette_get, notcurses), Cint, (Ptr{ncpalette}, Cint, Ptr{UInt32}), p, idx, palent)
end

function ncpalette_get_rgb8(p, idx, r, g, b)
    ccall((:ncpalette_get_rgb8, notcurses), Cint, (Ptr{ncpalette}, Cint, Ptr{Cuint}, Ptr{Cuint}, Ptr{Cuint}), p, idx, r, g, b)
end

function ncpalette_free(p)
    ccall((:ncpalette_free, notcurses), Cvoid, (Ptr{ncpalette},), p)
end

struct nccapabilities
    colors::Cuint
    utf8::Bool
    rgb::Bool
    can_change_colors::Bool
    halfblocks::Bool
    quadrants::Bool
    sextants::Bool
    braille::Bool
end

function notcurses_supported_styles(nc)
    ccall((:notcurses_supported_styles, notcurses), UInt16, (Ptr{notcurses},), nc)
end

function notcurses_palette_size(nc)
    ccall((:notcurses_palette_size, notcurses), Cuint, (Ptr{notcurses},), nc)
end

function notcurses_detected_terminal(nc)
    ccall((:notcurses_detected_terminal, notcurses), Ptr{Cchar}, (Ptr{notcurses},), nc)
end

function notcurses_capabilities(n)
    ccall((:notcurses_capabilities, notcurses), Ptr{nccapabilities}, (Ptr{notcurses},), n)
end

@cenum ncpixelimpl_e::UInt32 begin
    NCPIXEL_NONE = 0
    NCPIXEL_SIXEL = 1
    NCPIXEL_LINUXFB = 2
    NCPIXEL_ITERM2 = 3
    NCPIXEL_KITTY_STATIC = 4
    NCPIXEL_KITTY_ANIMATED = 5
    NCPIXEL_KITTY_SELFREF = 6
end

function notcurses_check_pixel_support(nc)
    ccall((:notcurses_check_pixel_support, notcurses), ncpixelimpl_e, (Ptr{notcurses},), nc)
end

function nccapability_canchangecolor(caps)
    ccall((:nccapability_canchangecolor, notcurses), Bool, (Ptr{nccapabilities},), caps)
end

function notcurses_cantruecolor(nc)
    ccall((:notcurses_cantruecolor, notcurses), Bool, (Ptr{notcurses},), nc)
end

function notcurses_canchangecolor(nc)
    ccall((:notcurses_canchangecolor, notcurses), Bool, (Ptr{notcurses},), nc)
end

function notcurses_canfade(n)
    ccall((:notcurses_canfade, notcurses), Bool, (Ptr{notcurses},), n)
end

function notcurses_canopen_images(nc)
    ccall((:notcurses_canopen_images, notcurses), Bool, (Ptr{notcurses},), nc)
end

function notcurses_canopen_videos(nc)
    ccall((:notcurses_canopen_videos, notcurses), Bool, (Ptr{notcurses},), nc)
end

function notcurses_canutf8(nc)
    ccall((:notcurses_canutf8, notcurses), Bool, (Ptr{notcurses},), nc)
end
